--- a/pet-project/src/index.scss
+++ b/pet-project/src/index.scss
@@ -11,7 +11,7 @@ $heightContent: calc(100vh - 80px);
 $heightNav:  60px;
 $cardColor: white;
 $marginCard: 10px 0 10px 0;
-
+$tooltipColor: #f4f4f4;
 .header-nav{
     height: $heightNav;
     border-bottom: 1px solid $borderColor;
@@ -29,19 +29,74 @@ $marginCard: 10px 0 10px 0;
 }
 
 .card-pet{
-    background-color: $cardColor;
-    border-radius: 8px;
-    margin: $marginCard;
+    @extend .card-styles;
     .card-pet__image{
         padding: 10px;
         img{
-            height: 100%;
+            height: 350px;
             width: 100%;
         }
     }
 }
 
+.card-pet-details{
+    @extend .card-styles;
+    #carouselImageGallery{
+        padding: 10px;
+        img{
+            height: 350px;
+        }
+    }
+}
+
+.card-styles{
+    background-color: $cardColor;
+    border-radius: 8px;
+    margin: $marginCard;
+}
+
 .card-pet:hover{
     box-shadow: 4px 4px 2px $borderColor; 
 }
-  
+ 
+.pet-form{
+    padding: 10px 30px 0 0;
+    .form-pet__button{
+        display: flex;
+        justify-content: end;
+    }
+}
+
+.customTooltip{
+	position: relative;
+    cursor: pointer;
+    .customTooltip__message {
+        display: none;
+        color: #000;
+        position: absolute;
+        left: 50%;
+        top: 0;
+        background-color: $tooltipColor;
+        transform: translateX(-50%);
+        white-space: nowrap;
+        padding: 10px 15px;
+        border-radius: 7px;
+    }
+    .customTooltip__message::before{
+        content: "";
+        position: absolute;
+        left:50%;
+        top:100%;
+        transform: translateX(-50%);
+        border: 15px solid;
+        border-color: $tooltipColor rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) rgba(255, 255, 255, 0)
+    }
+}
+
+.customTooltip:hover{
+    .customTooltip__message{
+        display: inline-block;
+        top:-140%;
+
+    }
+}
